--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 opencv-python>=4.5.0
 av>=8.0.0
-mediapipe>=0.8.10
+mediapipe==0.10.8
 numpy>=1.19.0
 streamlit>=1.11.0
 streamlit-webrtc>=0.44.0
-protobuf>=3.20.0,<4.0.0
