--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-opencv-python>=4.5.0
-av>=8.0.0
-mediapipe==0.10.8
-numpy>=1.19.0
-streamlit>=1.11.0
-streamlit-webrtc>=0.44.0
+mediapipe
+opencv-python-headless
+streamlit-webrtc
+numpy
